Tests in IngredientServiceTest, added Exception and validator for IngredientService